Fixed horizontal scroll and responsiveness for 375-860px resolution

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -51,10 +51,12 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-  width: auto;
-  height: auto;
-  max-width: 600px;
-  max-height: 120px;
+  /* width: auto; */
+  /* width: auto; */
+  height: 100%;
+  height: 100%;
+  /* max-width: 600px; */
+  /* max-height: 120px; */
 }
 
 @media screen and (max-width: 768px) {
