--- a/src/components/NewsCardsMap/NewsCardsMap.css
+++ b/src/components/NewsCardsMap/NewsCardsMap.css
@@ -58,7 +58,7 @@
   font-family: "Roboto Slab";
   font-size: 40px;
   font-weight: 400;
-  width: 721px;
+  width: 321px;
   /* width: auto; */
   height: 46px;
   /* margin-left: -499px; */
